<resources>
    <string name="app_name">A2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="itemsTag" translatable="false">itemsTag</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sweden">Sweden</string>
    <string name="finland">Finland</string>
    <string name="newspaper">Newspaper</string>
    <string name="tv">TV</string>
    <string name="friend">Friend</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
</resources>