<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemsLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:tag="@string/itemsTag"
    tools:context=".GroupsFragment">

    <TextView
        android:id="@+id/textItemSweden"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:tag="@string/itemsTag"
        android:text="@string/sweden"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textItemFinland"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:tag="@string/itemsTag"
        android:text="@string/finland"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textItemNewspaper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:tag="@string/itemsTag"
        android:text="@string/newspaper"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textItemTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:tag="@string/itemsTag"
        android:text="@string/tv"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textItemFriend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:tag="@string/itemsTag"
        android:text="@string/friend"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textItemGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:tag="@string/itemsTag"
        android:text="@string/google"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textItemFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:tag="@string/itemsTag"
        android:text="@string/facebook"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

</LinearLayout>